--- a/frontend/src/styles/Dashboard.css
+++ b/frontend/src/styles/Dashboard.css
@@ -8,13 +8,13 @@
 /* When sidebar open */
 .dashboard.sidebar-open {
   margin-left: 220px;
-  width: calc(97% - 220px);
+  width: calc(100% - 220px);
 }
 
 /* When sidebar closed */
 .dashboard.sidebar-closed {
   margin-left: 0;
-  width: 97%;
+  width: 100%;
 }
 
 /* Title */
@@ -67,7 +67,6 @@
 /* ===== Responsive ===== */
 @media (max-width: 992px) {
   .dashboard.sidebar-open {
-    margin-left: 180px;
     width: calc(100% - 180px);
   }
   .card {
@@ -76,6 +75,10 @@
 }
 
 @media (max-width: 768px) {
+  .dashboard.sidebar-open {
+    margin-left: 0px;
+    width: calc(100%);
+  }
   .dashboard {
     margin-left: 0;
     width: 100%;
